# spar-backend

./: Cargo.toml  Makefile  README.md  flake.nix  risk_analysis_workflow.json
migrations/: 0001_init_gsk.down.sql  0001_init_gsk.up.sql  0002_init_other.down.sql  0002_init_other.up.sql  0003_step_1_threat_identification.down.sql  0003_step_1_threat_identification.up.sql  0004_step_2_risk_classification.down.sql  0004_step_2_risk_classification.up.sql  0005_step_3_risk_treatment.down.sql  0005_step_3_risk_treatment.up.sql  0006_step_4_it_grundschutz_check.down.sql  0006_step_4_it_grundschutz_check.up.sql  20251013115047_init.down.sql  20251013115047_init.up.sql  20251027203444_modules_and_threats.down.sql  20251027203444_modules_and_threats.up.sql  20251028151714_threat_profile.up.sql  20251031112455_asset.down.sql  20251031112455_asset.up.sql  20251104174406_specific-threat.up.sql  20251106172347_threat_risk_classification.up.sql  20251108195500_threat_risk_treatment.down.sql  20251116112706_threat.down.sql  20251116112706_threat.up.sql  20251116112718_database_setup.down.sql  20251116112718_database_setup.up.sql  20251116112718_step_1.down.sql  (+7 more)
migrations-old/: 20251013115047_init.down.sql  20251027203444_modules_and_threats.down.sql  20251027203444_modules_and_threats.up.sql  20251028151714_threat_profile.down.sql  20251031112455_asset.down.sql  20251031112455_asset.up.sql  20251104174406_specific-threat.down.sql  20251106172347_threat_risk_classification.down.sql  20251106172347_threat_risk_classification.up.sql  20251108195500_threat_risk_treatment.up.sql
(+96 files in other folders)
