[package]
name = "spar-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde_json = "1.0.145"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros", "bit-vec"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
strum = "0.27.2"
strum_macros = "0.27.2"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
env_logger = "0.11.8"
